[package]
name = "enum-fields"
authors = ["Tristan Gerritsen <tristan@thewoosh.org>"]
license = "MIT OR Apache-2.0"
keywords = ["enum", "macros", "proc-macros"]
version = "0.1.0"
edition = "2021"
repository = "https://github.com/usadson/enum-fields"
description = "Quickly access shared enum fields in Rust."

[dependencies]
syn = "*"
proc-macro2 = "*"
quote = "*"

[lib]
proc-macro = true
