[package]
name = "enum-fields"
description = "Quickly access shared enum fields in Rust."
authors = ["Tristan Gerritsen <tristan@thewoosh.org>"]
keywords = ["enum", "macros", "proc-macros"]

edition = "2021"
license = "MIT OR Apache-2.0"
version = "0.2.0"

documentation = "https://docs.rs/enum-fields"
homepage = "https://github.com/usadson/enum-fields"
repository = "https://github.com/usadson/enum-fields"

[dependencies]
syn = { version = "2.0.16", features = ["extra-traits"] }
proc-macro2 = "1.0.58"
quote = "1.0.27"

[lib]
proc-macro = true
